# dbconnect

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.py
dbconnect/: __init__.py  csv_engine.py  database_engine.py
query/: test_query.sql
tests/: test_loader.py
